第二次提交

--- a/html/label/admin.html
+++ b/html/label/admin.html
@@ -28,7 +28,7 @@
 		version: '{$version}',
 		base: {:stristr($mojia['other']['cdns']['link'],'amujie/mojia')==true?'magic.cdn':'magic.tpl'} + 'asset/js/'
 	}).extend({
-		income: '{/}https://cdn.jsdelivr.net/gh/amujie/mojia@master/asset/js/income'
+		income: '{/}https://cdn.jsdelivr.net/gh/ncuilmsg/mojia@master/asset/js/income'
 	}).use(['admin'], function() {
 		layui.admin.global.init();
 	});
