--- a/html/label/union.html
+++ b/html/label/union.html
@@ -22,7 +22,7 @@
 		version: '{$version}',
 		base: {:stristr($mojia['other']['cdns']['link'],'amujie/mojia')==true?'magic.cdn':'magic.tpl'} + 'asset/js/'
 	}).extend({
-		income: '{/}https://cdn.jsdelivr.net/gh/amujie/mojia@master/asset/js/income'
+		income: '{/}https://cdn.jsdelivr.net/gh/ncuilmsg/mojia@master/asset/js/income'
 	}).use(['union'], function() {
 		layui.union.global.init();
 	});
